Related: tdf#147667 don't toggle radiobutton on mnemonic if it's not unique

which we already do with checkbuttons, and is what gtk also does when
this arises

Change-Id: I1b5a4c98bd5062f3a340a53a5d6d977a4af3e384